kubernetes/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: trac-staging
spec: {}
status: {}
