kubernetes/overlays/staging/patch-ui-resources.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: trac-tcm-ui

spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: trac-tcm-ui
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: "1"
            memory: 512Mi
